# newApi/config/routes.rb
@@ -1,9 +1,13 @@
 Rails.application.routes.draw do
+  get 'controller_name/action1'
+  post 'controller_name/action2'
+  resources :drafts
+  get 'users/index'
   mount Rswag::Ui::Engine => '/api-docs'
   mount Rswag::Api::Engine => '/api-docs'
   resources :cars
   resources :trails
-  resources :forests
+  resources :forests, only: [:index, :show]
   # Define your application routes per the DSL in https://guides.rubyonrails.org/routing.html
   # Defines the root path route ("/")
   # root "articles#index"
